- update `code-splitting` codeblocks

--- a/docs/usage/rtk-query/code-splitting.mdx
+++ b/docs/usage/rtk-query/code-splitting.mdx
@@ -16,8 +16,8 @@ Calling `injectEndpoints` will inject the endpoints into the original API, but a
 So the most basic approach would be to have one empty central api definition:
 
 ```ts title="Basic setup"
-// Or from '@reduxjs/toolkit/query/react'
-import { createApi, fetchBaseQuery } from '@reduxjs/toolkit/query'
+// Or from '@reduxjs/toolkit/query' if not using the auto-generated hooks
+import { createApi, fetchBaseQuery } from '@reduxjs/toolkit/query/react'
 
 // initialize an empty api service that we'll inject endpoints into later as needed
 export const emptySplitApi = createApi({
@@ -29,6 +29,17 @@ export const emptySplitApi = createApi({
 and then inject the api endpoints in other files and export them from there - that way you will be sure to always import the endpoints in a way that they are definitely injected.
 
 ```ts title="Injecting & exporting additional endpoints"
+// file: emptySplitApi.ts noEmit
+import { createApi, fetchBaseQuery } from '@reduxjs/toolkit/query/react'
+
+export const emptySplitApi = createApi({
+  baseQuery: fetchBaseQuery({ baseUrl: '/' }),
+  endpoints: () => ({}),
+})
+
+// file: extendedApi.ts
+import { emptySplitApi } from './emptySplitApi'
+
 const extendedApi = emptySplitApi.injectEndpoints({
   endpoints: (build) => ({
     example: build.query({
@@ -38,7 +49,7 @@ const extendedApi = emptySplitApi.injectEndpoints({
   overrideExisting: false,
 });
 
-export { useExampleQuery } = extendedApi;
+export const { useExampleQuery } = extendedApi;
 ```
 
 :::tip
@@ -50,6 +61,20 @@ You will get a warning if you inject an endpoint that already exists in developm
 However, doing this, you will never end up with one "big api definition" that has correct types for all endpoints. Under certain circumstances, that might be useful though. So you can use the `ApiWithInjectedEndpoints` to construct this "full api definition" yourself:
 
 ```ts title="Declaring an API using ApiWithInjectedEndpoints"
+// file: posts.ts noEmit
+import { createApi, fetchBaseQuery } from '@reduxjs/toolkit/query/react'
+export const apiWithPosts = createApi({
+  baseQuery: fetchBaseQuery({ baseUrl: '/' }),
+  endpoints: () => ({}),
+})
+// file: post.ts noEmit
+import { createApi, fetchBaseQuery } from '@reduxjs/toolkit/query/react'
+export const apiWithPost = createApi({
+  baseQuery: fetchBaseQuery({ baseUrl: '/' }),
+  endpoints: () => ({}),
+})
+
+// file: splitApi.ts
 import {
   createApi,
   fetchBaseQuery,
@@ -107,8 +132,14 @@ const Post = ({ id }: { id: number }) => {
 
 <iframe
   src="https://codesandbox.io/embed/concepts-code-splitting-9cll0?fontsize=12&hidenavigation=1&theme=dark&module=%2Fsrc%2Ffeatures%2Fposts%2FPostsManager.tsx"
-  style={{ width: '100%', height: '600px', border: 0, borderRadius: '4px', overflow: 'hidden' }}
-     title="Concepts Code Splitting"
+  style={{
+    width: '100%',
+    height: '600px',
+    border: 0,
+    borderRadius: '4px',
+    overflow: 'hidden',
+  }}
+  title="Concepts Code Splitting"
   allow="geolocation; microphone; camera; midi; vr; accelerometer; gyroscope; payment; ambient-light-sensor; encrypted-media; usb"
   sandbox="allow-modals allow-forms allow-popups allow-scripts allow-same-origin"
 ></iframe>
