--- a/docs/api/rtk-query/createApi.mdx
+++ b/docs/api/rtk-query/createApi.mdx
@@ -11,7 +11,7 @@ hide_title: true
 
 ```ts title="Example: src/services/pokemon.ts"
 // Need to use the React-specific entry point to allow generating React hooks
-import { createApi, fetchBaseQuery } from '@reduxjs/toolkit/react'
+import { createApi, fetchBaseQuery } from '@reduxjs/toolkit/query/react'
 
 // highlight-start
 // Define a service using a base URL and expected endpoints
@@ -71,7 +71,7 @@ export const { useGetPokemonByNameQuery } = pokemonApi
 
 Defaults to:
 
-```ts no-compile
+```ts no-transpile
 export const defaultSerializeQueryArgs: SerializeQueryArgs<any> = ({
   endpoint,
   queryArgs,
@@ -116,7 +116,7 @@ export const defaultSerializeQueryArgs: SerializeQueryArgs<any> = ({
 
 - `onStart`, `onError` and `onSuccess` _(optional)_ - Available to both [queries](../../usage/rtk-query/queries.mdx) and [mutations](../../usage/rtk-query/mutations.mdx)
   - Can be used in `mutations` for [optimistic updates](../../usage/rtk-query/optimistic-updates.mdx).
-  - ```ts title="Mutation lifecycle signatures"
+  - ```ts title="Mutation lifecycle signatures" no-transpile
     function onStart(
       arg: QueryArg,
       mutationApi: MutationApi<ReducerPath, Context>
@@ -132,7 +132,7 @@ export const defaultSerializeQueryArgs: SerializeQueryArgs<any> = ({
       result: ResultType
     ): void
     ```
-  - ```ts title="Query lifecycle signatures"
+  - ```ts title="Query lifecycle signatures" no-transpile
     function onStart(
       arg: QueryArg,
       queryApi: QueryApi<ReducerPath, Context>
@@ -154,12 +154,21 @@ export const defaultSerializeQueryArgs: SerializeQueryArgs<any> = ({
 When defining a key like `getPosts` as shown below, it's important to know that this name will become exportable from `api` and be able to referenced under `api.endpoints.getPosts.useQuery()`, `api.endpoints.getPosts.initiate()` and `api.endpoints.getPosts.select()`. The same thing applies to `mutation`s but they reference `useMutation` instead of `useQuery`.
 
 ```ts
+import { createApi, fetchBaseQuery } from '@reduxjs/toolkit/query/react'
+interface Post {
+  id: number
+  name: string
+}
+type PostsResponse = Post[]
+
 const api = createApi({
-  baseQuery: fetchBaseQuery('/'),
+  baseQuery: fetchBaseQuery({ baseUrl: '/' }),
+  tagTypes: ['Posts'],
   endpoints: (build) => ({
     getPosts: build.query<PostsResponse, void>({
       query: () => 'posts',
-      provides: (result) => result ? result.map(({ id }) => ({ type: 'Posts', id })) : [],
+      provides: (result) =>
+        result ? result.map(({ id }) => ({ type: 'Posts', id })) : [],
     }),
     addPost: build.mutation<Post, Partial<Post>>({
       query: (body) => ({
@@ -170,13 +179,13 @@ const api = createApi({
       invalidates: ['Posts'],
     }),
   }),
-});
+})
 
 // Auto-generated hooks
-export { useGetPostsQuery, useAddPostMutation } = api;
+export const { useGetPostsQuery, useAddPostMutation } = api
 
 // Possible exports
-export const { endpoints, reducerPath, reducer, middleware } = api;
+export const { endpoints, reducerPath, reducer, middleware } = api
 // reducerPath, reducer, middleware are only used in store configuration
 // endpoints will have:
 // endpoints.getPosts.initiate(), endpoints.getPosts.select(), endpoints.getPosts.useQuery()
@@ -198,17 +207,32 @@ function defaultTransformResponse(baseQueryReturnValue: unknown) {
 
 To change it, provide a function that looks like:
 
-```ts
+```ts no-transpile
 transformResponse: (response) => response.some.deeply.nested.property
 ```
 
 ```ts title="GraphQL transformation example"
+// file: graphqlBaseQuery.ts noEmit
+import { BaseQueryFn } from '@reduxjs/toolkit/query'
+declare const graphqlBaseQuery: (args: { baseUrl: string }) => BaseQueryFn
+declare const gql: (literals: TemplateStringsArray) => void
+export { graphqlBaseQuery, gql }
+
+// file: graphqlApi.ts
+import { createApi } from '@reduxjs/toolkit/query'
+import { graphqlBaseQuery, gql } from './graphqlBaseQuery'
+
+interface Post {
+  id: number
+  title: string
+}
+
 export const api = createApi({
   baseQuery: graphqlBaseQuery({
     baseUrl: '/graphql',
   }),
   endpoints: (builder) => ({
-    getPosts: builder.query({
+    getPosts: builder.query<Post[], void>({
       query: () => ({
         body: gql`
           query {
@@ -221,7 +245,8 @@ export const api = createApi({
           }
         `,
       }),
-      transformResponse: (response) => response.posts.data,
+      transformResponse: (response: { posts: { data: Post[] } }) =>
+        response.posts.data,
     }),
   }),
 })
