--- a/docs/api/rtk-query/setupListeners.mdx
+++ b/docs/api/rtk-query/setupListeners.mdx
@@ -10,7 +10,7 @@ hide_table_of_contents: false
 
 A utility used to enable `refetchOnMount` and `refetchOnReconnect` behaviors. It requires the `dispatch` method from your store. Calling `setupListeners(store.dispatch)` will configure listeners with the recommended defaults, but you have the option of providing a callback for more granular control.
 
-```ts title="setupListeners default configuration"
+```ts title="setupListeners default configuration" no-transpile
 let initialized = false
 export function setupListeners(
   dispatch: ThunkDispatch<any, any, any>,
@@ -71,6 +71,6 @@ export function setupListeners(
 
 If you notice, `onFocus`, `onFocusLost`, `onOffline`, `onOnline` are all actions that are provided to the callback. Additionally, these actions are made available to `api.internalActions` and are able to be used by dispatching them like this:
 
-```ts title="Manual onFocus event"
+```ts title="Manual onFocus event" no-transpile
 dispatch(api.internalActions.onFocus())
 ```
