--- a/docs/api/rtk-query/createApi.mdx
+++ b/docs/api/rtk-query/createApi.mdx
@@ -7,7 +7,7 @@ hide_title: true
 
 # `createApi`
 
-`createApi` is the core of RTK Query's functionality. It allows you to define a set of endpoints describe how to retrieve data from a series of endpoints, including configuration of how to fetch and transform that data. It generates [an "API slice" structure](./created-api/overview.md) that contains Redux logic (and optionally React hooks) that encapsulate the data fetching and caching process for you.
+`createApi` is the core of RTK Query's functionality. It allows you to define a set of endpoints describe how to retrieve data from a series of endpoints, including configuration of how to fetch and transform that data. It generates [an "API slice" structure](./created-api/overview.mdx) that contains Redux logic (and optionally React hooks) that encapsulate the data fetching and caching process for you.
 
 ```ts title="Example: src/services/pokemon.ts"
 // Need to use the React-specific entry point to allow generating React hooks
