- update `redux-integration` codeblocks

--- a/docs/api/rtk-query/created-api/overview.mdx
+++ b/docs/api/rtk-query/created-api/overview.mdx
@@ -63,7 +63,7 @@ The generated slice reducer and the middleware both need to be adding to your Re
 
 :::info API Reference
 
-- [API Slices: Redux Integration](./redux-integration.md)
+- [API Slices: Redux Integration](./redux-integration.mdx)
 
 :::
 
