- update `endpoints` codeblocks

--- a/docs/api/rtk-query/created-api/overview.mdx
+++ b/docs/api/rtk-query/created-api/overview.mdx
@@ -73,7 +73,7 @@ The API slice object will have an `endpoints` field inside. This section maps th
 
 :::info API Reference
 
-- [API Slices: Endpoints](./endpoints.md)
+- [API Slices: Endpoints](./endpoints.mdx)
 
 :::
 
