- update `code-splitting` codeblocks

--- a/docs/api/rtk-query/created-api/overview.mdx
+++ b/docs/api/rtk-query/created-api/overview.mdx
@@ -87,7 +87,7 @@ Each API slice object has `injectEndpoints` and `enhanceEndpoints` functions to 
 
 :::info API Reference
 
-- [API Slices: Code Splitting and Generation](./code-splitting.md)
+- [API Slices: Code Splitting and Generation](./code-splitting.mdx)
 
 :::
 
