--- a/docs/api/rtk-query/created-api/code-splitting.mdx
+++ b/docs/api/rtk-query/created-api/code-splitting.mdx
@@ -17,7 +17,7 @@ Each API slice object has `injectEndpoints` and `enhanceEndpoints` functions to 
 
 #### Signature
 
-```ts
+```ts no-transpile
 const injectEndpoints = (endpointOptions: InjectedEndpointOptions) =>
   EnhancedApiSlice
 
@@ -41,7 +41,7 @@ This method is primarily useful for code splitting and hot reloading.
 
 #### Signature
 
-```ts
+```ts no-transpile
 const enhanceEndpoints = (endpointOptions: EnhanceEndpointsOptions) =>
   EnhancedApiSlice
 
