--- a/docs/api/rtk-query/created-api/cache-management.mdx
+++ b/docs/api/rtk-query/created-api/cache-management.mdx
@@ -13,7 +13,7 @@ The API slice object includes cache management utilities that are used for imple
 
 #### Signature
 
-```ts
+```ts no-transpile
 const updateQueryResult = (
   endpointName: string,
   args: any,
@@ -45,7 +45,7 @@ This is typically used as the first step in implementing optimistic updates. The
 
 #### Signature
 
-```ts
+```ts no-transpile
 const patchQueryResult = (
   endpointName: string,
   args: any
@@ -65,7 +65,7 @@ This is typically used as the second step in implementing optimistic updates. If
 
 #### Signature
 
-```ts
+```ts no-transpile
 type PrefetchOptions = { ifOlderThan?: false | number } | { force?: boolean };
 
 const prefetch = (
