--- a/docs/api/rtk-query/created-api/overview.mdx
+++ b/docs/api/rtk-query/created-api/overview.mdx
@@ -126,6 +126,6 @@ The React-specific version of `createApi` also generates a `usePrefetch` hook, a
 
 :::info API Reference
 
-- [API Slices: React Hooks](./hooks.md)
+- [API Slices: React Hooks](./hooks.mdx)
 
 :::
