--- a/docs/usage/rtk-query/mutations.mdx
+++ b/docs/usage/rtk-query/mutations.mdx
@@ -304,7 +304,7 @@ When `addPost` is fired, it will only cause the `PostsList` to go into an `isFet
 This is an example of a [CRUD service](https://en.wikipedia.org/wiki/Create,_read,_update_and_delete) for Posts. This implements the [Selectively invalidating lists](#selectively-invalidating-lists) strategy and will most likely serve as a good foundation for real applications.
 
 ```ts title="src/app/services/posts.ts"
-// Or from '@reduxjs/toolkit/query/react'
+// Or from '@reduxjs/toolkit/query' if not using the auto-generated hooks
 import { createApi, fetchBaseQuery } from '@reduxjs/toolkit/query/react'
 
 export interface Post {
