--- a/docs/usage/rtk-query/queries.mdx
+++ b/docs/usage/rtk-query/queries.mdx
@@ -21,6 +21,7 @@ export interface Post {
 }
 
 // file: api.ts
+// Or from '@reduxjs/toolkit/query/react'
 import { createApi, fetchBaseQuery } from '@reduxjs/toolkit/query'
 import { Post } from './types'
 
