Docs - RTKQ - Convert codeblocks to TS & enable codeblock transpilation (#1042)
* Docs - RTKQ - Convert codeblocks to TS

* - Update docs typescript version
- Update `rtk-query quick start` codeblocks

* - update `mutations` codeblocks

* - update `error-handling` codeblocks

* - update `conditional-fetching` codeblocks

* - update `pagination` codeblocks

* - update `polling` codeblocks

* - update `prefetching` codeblocks

* - update `optimistic-updates` codeblocks

* - update `code-splitting` codeblocks

* - update `remark-typescript-tools`
- update `code-generation` codeblocks

* - fix broken links

* - update `customizing-create-api` codeblocks

* - update `createApi` codeblocks

* - update `fetchBaseQuery` codeblocks

* - update `ApiProvider` codeblocks

* - update `setupListeners` codeblocks

* - update `overview` codeblocks

* - update `redux-integration` codeblocks

* - update `endpoints` codeblocks

* - update `code-splitting` codeblocks

* - update `cache-management` codeblocks

* - update `hooks` codeblocks

* - misc cleanup

* - fix invalid example

* - Make typing for `createApi` example clearer

--- a/docs/api/rtk-query/created-api/cache-management.mdx
+++ b/docs/api/rtk-query/created-api/cache-management.mdx
@@ -7,13 +7,13 @@ hide_title: true
 
 # API Slices: Cache Management Utilities
 
-The API slice object includes cache management utilities that are used for implementing [optimistic updates](../../../usage/rtk-query/optimistic-updates.md). These are included in a `util` field inside the slice object.
+The API slice object includes cache management utilities that are used for implementing [optimistic updates](../../../usage/rtk-query/optimistic-updates.mdx). These are included in a `util` field inside the slice object.
 
 ### `updateQueryResult`
 
 #### Signature
 
-```ts
+```ts no-transpile
 const updateQueryResult = (
   endpointName: string,
   args: any,
@@ -45,7 +45,7 @@ This is typically used as the first step in implementing optimistic updates. The
 
 #### Signature
 
-```ts
+```ts no-transpile
 const patchQueryResult = (
   endpointName: string,
   args: any
@@ -65,7 +65,7 @@ This is typically used as the second step in implementing optimistic updates. If
 
 #### Signature
 
-```ts
+```ts no-transpile
 type PrefetchOptions = { ifOlderThan?: false | number } | { force?: boolean };
 
 const prefetch = (
