--- a/docs/api/rtk-query/fetchBaseQuery.mdx
+++ b/docs/api/rtk-query/fetchBaseQuery.mdx
@@ -18,14 +18,14 @@ It takes all standard options from fetch's [`RequestInit`](https://developer.moz
 
   - Allows you to inject headers on every request. You can specify headers at the endpoint level, but you'll typically want to set common headers like `authorization` here. As a convience mechanism, the second argument allows you to use `getState` to access your redux store in the event you store information you'll need there such as an auth token.
 
-  - ```ts title="prepareHeaders signature"
+  - ```ts title="prepareHeaders signature" no-transpile
     ;(headers: Headers, api: { getState: () => unknown }) => Headers
     ```
 
 - `fetchFn` _(optional)_
   - A fetch function that overrides the default on the window. Can be useful in SSR environments where you may need to leverage `isomorphic-fetch` or `cross-fetch`.
 
-```ts title="Return types of fetchBaseQuery"
+```ts title="Return types of fetchBaseQuery" no-transpile
 Promise<{
     data: any;
     error?: undefined;
@@ -68,8 +68,15 @@ export const pokemonApi = createApi({
 The most common use case for `prepareHeaders` would be to automatically include `authorization` headers for your API requests.
 
 ```ts title="Setting a token from a redux store value
+// file: store.ts noEmit
+export type RootState = { auth: { token : string } };
+
+// file: baseQuery.ts
+import { fetchBaseQuery } from '@reduxjs/toolkit/query'
+import type { RootState } from './store'
+
 const baseQuery = fetchBaseQuery({
-  baseUrl,
+  baseUrl: '/',
   prepareHeaders: (headers, { getState }) => {
     const token = (getState() as RootState).auth.token
 
@@ -111,7 +118,7 @@ By default, `fetchBaseQuery` assumes that every request you make will be `json`,
 
 #### json
 
-```ts
+```ts no-transpile
  // omitted
   endpoints: (builder) => ({
     updateUser: builder.query({
@@ -125,7 +132,7 @@ By default, `fetchBaseQuery` assumes that every request you make will be `json`,
 
 #### text
 
-```ts
+```ts no-transpile
  // omitted
   endpoints: (builder) => ({
     updateUser: builder.query({
@@ -144,7 +151,8 @@ By default, `fetchBaseQuery` assumes that every request you make will be `json`,
 
 `fetchBaseQuery` provides a simple mechanism that converts an `object` to a serialized query string. If this doesn't suit your needs, you can always build your own querystring and set it in the `url`.
 
-```ts
+```ts no-transpile
+ // omitted
   endpoints: (builder) => ({
     updateUser: builder.query({
       query: (user: Record<string, string>) => ({
@@ -159,6 +167,8 @@ By default, `fetchBaseQuery` assumes that every request you make will be `json`,
 By default, `fetchBaseQuery` assumes that every `Response` you get will be parsed as `json`. In the event that you don't want that to happen, you can specify an alternative response handler like `text`, or take complete control and use a custom function that accepts the raw `Response` object &mdash; allowing you to use any [`Body` method](https://developer.mozilla.org/en-US/docs/Web/API/Body).
 
 ```ts title="Parse a Response as text"
+import { createApi, fetchBaseQuery } from '@reduxjs/toolkit/query'
+
 export const customApi = createApi({
   baseQuery: fetchBaseQuery({ baseUrl: '/api/' }),
   endpoints: (builder) => ({
@@ -181,6 +191,8 @@ If you make a `json` request to an API that only returns a `200` with an undefin
 By default, `fetchBaseQuery` will `reject` any `Response` that does not have a status code of `2xx` and set it to `error`. This is the same behavior you've most likely experienced with `axios` and other popular libraries. In the event that you have a non-standard API you're dealing with, you can use the `validateStatus` option to customize this behavior.
 
 ```ts title="Using a custom validateStatus"
+import { createApi, fetchBaseQuery } from '@reduxjs/toolkit/query'
+
 export const customApi = createApi({
   baseQuery: fetchBaseQuery({ baseUrl: '/api/' }), // Set the baseUrl for every endpoint below
   endpoints: (builder) => ({
