--- a/docs/usage/rtk-query/queries.mdx
+++ b/docs/usage/rtk-query/queries.mdx
@@ -13,20 +13,37 @@ By default, RTK Query ships with [`fetchBaseQuery`](../../api/rtk-query/fetchBas
 
 > Depending on your environment, you may need to polyfill `fetch` with `node-fetch` or `cross-fetch` if you choose to use `fetchBaseQuery` or `fetch` on its own.
 
-```js title="Example of all query endpoint options"
+```ts title="Example of all query endpoint options"
+// file: types.ts noEmit
+export interface Post {
+  id: number
+  name: string
+}
+
+// file: api.ts
+// Or from '@reduxjs/toolkit/query/react'
+import { createApi, fetchBaseQuery } from '@reduxjs/toolkit/query'
+import { Post } from './types'
+
 const api = createApi({
-  baseQuery,
+  baseQuery: fetchBaseQuery({
+    baseUrl: '/',
+  }),
+  tagTypes: ['Post'],
   endpoints: (build) => ({
-    getPost: build.query({
+    getPost: build.query<Post, number>({
+      // highlight-start
+      // note: an optional `queryFn` may be used in place of `query`
       query: (id) => ({ url: `post/${id}` }),
       // Pick out data and prevent nested properties in a hook or selector
-      transformResponse: (response) => response.data,
+      transformResponse: (response: { data: Post }) => response.data,
       // The 2nd parameter is the destructured `queryApi`
       onStart(id, { dispatch, getState, extra, requestId, context }) {},
       // `result` is the server response
       onSuccess(id, queryApi, result) {},
       onError(id, queryApi) {},
       providesTags: (result, error, id) => [{ type: 'Post', id }],
+      // highlight-end
     }),
   }),
 })
@@ -66,7 +83,7 @@ There are 5 query-related hooks:
 
 #### Query Hook Return Types
 
-```ts title="All returned elements"
+```ts title="All returned elements" no-transpile
 // Base query state
 originalArgs?: unknown; // Arguments passed to the query
 data?: unknown; // Returned result if present
@@ -87,7 +104,7 @@ refetch: () => void; // A function to force refetch the query
 
 Here is an example of a `PostDetail` component:
 
-```ts title="Example"
+```tsx title="Example"
 export const PostDetail = ({ id }: { id: string }) => {
   const { data: post, isFetching, isLoading } = useGetPostQuery(id, {
     pollingInterval: 3000,
@@ -121,7 +138,7 @@ Sometimes you may have a parent component that is subscribed to a query, and the
 
 `selectFromResult` allows you to get a specific segment from a query result in a performant manner. When using this feature, the component will not rerender unless the underlying data of the selected item has changed. If the selected item is one element in a larger collection, it will disregard changes to elements in the same collection.
 
-```ts title="Using selectFromResult to extract a single result"
+```tsx title="Using selectFromResult to extract a single result"
 function PostsList() {
   const { data: posts } = api.useGetPostsQuery()
 
@@ -158,7 +175,7 @@ In some cases, you may want to skip this behavior and force a refetch - in that 
 
 > If you're not using React Hooks, you can access `refetch` like this:
 >
-> ```ts
+> ```ts no-transpile
 > const { status, data, error, refetch } = dispatch(
 >   pokemonApi.endpoints.getPokemon.initiate('bulbasaur')
 > )
@@ -180,9 +197,16 @@ What you'll see below is this:
 Click the 'Add bulbasaur' button. You'll observe the same behavior described above until you click the 'Refetch' button on one of the components.
 :::
 
-<iframe src="https://codesandbox.io/embed/concepts-queries-deduping-caching-5qy3n?fontsize=12&hidenavigation=1&theme=dark"
-     style={{ width: '100%', height: '800px', border: 0, borderRadius: '4px', overflow: 'hidden' }}
-     title="rtk-query-react-hooks-example"
-     allow="geolocation; microphone; camera; midi; vr; accelerometer; gyroscope; payment; ambient-light-sensor; encrypted-media; usb" 
-     sandbox="allow-modals allow-forms allow-popups allow-scripts allow-same-origin"
+<iframe
+  src="https://codesandbox.io/embed/concepts-queries-deduping-caching-5qy3n?fontsize=12&hidenavigation=1&theme=dark"
+  style={{
+    width: '100%',
+    height: '800px',
+    border: 0,
+    borderRadius: '4px',
+    overflow: 'hidden',
+  }}
+  title="rtk-query-react-hooks-example"
+  allow="geolocation; microphone; camera; midi; vr; accelerometer; gyroscope; payment; ambient-light-sensor; encrypted-media; usb"
+  sandbox="allow-modals allow-forms allow-popups allow-scripts allow-same-origin"
 ></iframe>
